--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="food_layout_description">Description</string>
     <string name="food_layout_price">Price</string>
     <string name="food_layout_discount">Discount</string>
+    <string name="title_activity_tracking_order">TrackingOrder</string>
 </resources>
